# rust-cmds

./: Cargo.toml  README.md
cd2/: .env  Cargo.toml  README.md  install.sh
cd2/assets/: cd2
cd2/assets/migrations/: 20230831153332_create-dir-table.sql
cd2/src/: cli.rs  db.rs  dir.rs  guess.rs  lib.rs  main.rs
doc/: book.toml
doc/src/: SUMMARY.md
doc/src/dir/: index.md
doc/src/rep/: index.md
rep/: Cargo.toml
rep/src/: main.rs
