[package]
name = "cd2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.28", features = ["serde"] }
clap = { version = "4.4.1", features = ["cargo"] }
home = "0.5.5"
lazy_static = "1.4.0"
strsim = "0.10.0"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

[dependencies.sqlx]
version = "0.7.1" 
default-features = false
features = [ 
    "runtime-tokio", 
    "macros", 
    "sqlite", 
    "chrono", 
    "migrate" 
]
